crates/ruff_linter/src/rules/flake8_logging/snapshots/ruff_linter__rules__flake8_logging__tests__LOG001_LOG001.py.snap
---
source: crates/ruff_linter/src/rules/flake8_logging/mod.rs
---
LOG001 [*] Use `logging.getLogger()` to instantiate loggers
 --> LOG001.py:3:1
  |
1 | import logging
2 |
3 | logging.Logger(__name__)
  | ^^^^^^^^^^^^^^
4 | logging.Logger()
5 | logging.getLogger(__name__)
  |
help: Replace with `logging.getLogger()`
  |
1 ~ import logging
2 |
3 ~ logging.getLogger(__name__)
  |
note: This is an unsafe fix and may change runtime behavior

LOG001 [*] Use `logging.getLogger()` to instantiate loggers
 --> LOG001.py:4:1
  |
3 | logging.Logger(__name__)
4 | logging.Logger()
  | ^^^^^^^^^^^^^^
5 | logging.getLogger(__name__)
  |
help: Replace with `logging.getLogger()`
  |
1 ~ import logging
2 |
3 | logging.Logger(__name__)
4 ~ logging.getLogger()
  |
note: This is an unsafe fix and may change runtime behavior
