crates/ruff_linter/src/rules/flake8_logging/snapshots/ruff_linter__rules__flake8_logging__tests__LOG004_LOG004_0.py.snap
---
source: crates/ruff_linter/src/rules/flake8_logging/mod.rs
---
LOG004 [*] `.exception()` call outside exception handlers
  --> LOG004_0.py:13:1
   |
11 | ### Errors
12 |
13 | logging.exception("")
   | ^^^^^^^^^^^^^^^^^^^^^
14 | logger.exception("")
15 | exc("")
   |
help: Replace with `.error()`
   |
13 - logging.exception("")
13 + logging.error("")
   |
note: This is an unsafe fix and may change runtime behavior

LOG004 [*] `.exception()` call outside exception handlers
  --> LOG004_0.py:14:1
   |
13 | logging.exception("")
14 | logger.exception("")
   | ^^^^^^^^^^^^^^^^^^^^
15 | exc("")
   |
help: Replace with `.error()`
   |
14 - logger.exception("")
14 + logger.error("")
   |
note: This is an unsafe fix and may change runtime behavior

LOG004 `.exception()` call outside exception handlers
  --> LOG004_0.py:15:1
   |
13 | logging.exception("")
14 | logger.exception("")
15 | exc("")
   | ^^^^^^^
help: Replace with `.error()`

LOG004 [*] `.exception()` call outside exception handlers
  --> LOG004_0.py:19:5
   |
18 | def _():
19 |     logging.exception("")
   |     ^^^^^^^^^^^^^^^^^^^^^
20 |     logger.exception("")
21 |     exc("")
   |
help: Replace with `.error()`
   |
19 -     logging.exception("")
19 +     logging.error("")
   |
note: This is an unsafe fix and may change runtime behavior

LOG004 [*] `.exception()` call outside exception handlers
  --> LOG004_0.py:20:5
   |
18 | def _():
19 |     logging.exception("")
20 |     logger.exception("")
   |     ^^^^^^^^^^^^^^^^^^^^
21 |     exc("")
   |
help: Replace with `.error()`
   |
20 -     logger.exception("")
20 +     logger.error("")
   |
note: This is an unsafe fix and may change runtime behavior

LOG004 `.exception()` call outside exception handlers
  --> LOG004_0.py:21:5
   |
19 |     logging.exception("")
20 |     logger.exception("")
21 |     exc("")
   |     ^^^^^^^
help: Replace with `.error()`
