crates/ruff_linter/src/rules/flake8_logging/snapshots/ruff_linter__rules__flake8_logging__tests__LOG004_LOG004_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_logging/mod.rs
---
LOG004 [*] `.exception()` call outside exception handlers
 --> LOG004_1.py:4:1
  |
4 | logger.exception("")
  | ^^^^^^^^^^^^^^^^^^^^
help: Replace with `.error()`
  |
4 - logger.exception("")
4 + logger.error("")
  |
note: This is an unsafe fix and may change runtime behavior
