crates/ruff_linter/src/rules/flake8_logging/snapshots/ruff_linter__rules__flake8_logging__tests__LOG007_LOG007.py.snap
---
source: crates/ruff_linter/src/rules/flake8_logging/mod.rs
---
LOG007 Use of `logging.exception` with falsy `exc_info`
 --> LOG007.py:6:1
  |
6 | logging.exception("foo", exc_info=False)  # LOG007
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

LOG007 Use of `logging.exception` with falsy `exc_info`
 --> LOG007.py:7:1
  |
7 | logging.exception("foo", exc_info=[])  # LOG007
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

LOG007 Use of `logging.exception` with falsy `exc_info`
 --> LOG007.py:9:1
  |
9 | logger.exception("foo", exc_info=False)  # LOG007
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

LOG007 Use of `logging.exception` with falsy `exc_info`
  --> LOG007.py:10:1
   |
10 | logger.exception("foo", exc_info=[])  # LOG007
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

LOG007 Use of `logging.exception` with falsy `exc_info`
  --> LOG007.py:17:1
   |
17 | exception("foo", exc_info=False)  # LOG007
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
