crates/ruff_linter/src/rules/flake8_logging/snapshots/ruff_linter__rules__flake8_logging__tests__LOG009_LOG009.py.snap
---
source: crates/ruff_linter/src/rules/flake8_logging/mod.rs
---
LOG009 [*] Use of undocumented `logging.WARN` constant
 --> LOG009.py:4:5
  |
2 |     import logging
3 |
4 |     logging.WARN  # LOG009
  |     ^^^^^^^^^^^^
5 |     logging.WARNING  # OK
  |
help: Replace `logging.WARN` with `logging.WARNING`
  |
2 ~     import logging
3 |
4 ~     logging.WARNING  # LOG009
  |

LOG009 [*] Use of undocumented `logging.WARN` constant
  --> LOG009.py:11:5
   |
 9 |     from logging import WARN, WARNING
10 |
11 |     WARN  # LOG009
   |     ^^^^
12 |     WARNING  # OK
   |
help: Replace `logging.WARN` with `logging.WARNING`
   |
 9 ~     from logging import WARN, WARNING
10 |
11 ~     WARNING  # LOG009
   |
