crates/ruff_linter/src/rules/flake8_logging/snapshots/ruff_linter__rules__flake8_logging__tests__LOG014_LOG014.py.snap
---
source: crates/ruff_linter/src/rules/flake8_logging/mod.rs
---
LOG014.py:12:18: LOG014 [*] `exc_info=` outside exception handlers
   |
10 | ### Errors
11 |
12 | logging.info("", exc_info=True)
   |                  ^^^^^^^^^^^^^ LOG014
13 | logger.info("", exc_info=True)
   |
   = help: Remove `exc_info=`

ℹ Unsafe fix
9  9  | 
10 10 | ### Errors
11 11 | 
12    |-logging.info("", exc_info=True)
   12 |+logging.info("")
13 13 | logger.info("", exc_info=True)
14 14 | 
15 15 | 

LOG014.py:13:17: LOG014 [*] `exc_info=` outside exception handlers
   |
12 | logging.info("", exc_info=True)
13 | logger.info("", exc_info=True)
   |                 ^^^^^^^^^^^^^ LOG014
   |
   = help: Remove `exc_info=`

ℹ Unsafe fix
10 10 | ### Errors
11 11 | 
12 12 | logging.info("", exc_info=True)
13    |-logger.info("", exc_info=True)
   13 |+logger.info("")
14 14 | 
15 15 | 
16 16 | logging.info("", exc_info=1)

LOG014.py:16:18: LOG014 [*] `exc_info=` outside exception handlers
   |
16 | logging.info("", exc_info=1)
   |                  ^^^^^^^^^^ LOG014
17 | logger.info("", exc_info=1)
   |
   = help: Remove `exc_info=`

ℹ Unsafe fix
13 13 | logger.info("", exc_info=True)
14 14 | 
15 15 | 
16    |-logging.info("", exc_info=1)
   16 |+logging.info("")
17 17 | logger.info("", exc_info=1)
18 18 | 
19 19 | 

LOG014.py:17:17: LOG014 [*] `exc_info=` outside exception handlers
   |
16 | logging.info("", exc_info=1)
17 | logger.info("", exc_info=1)
   |                 ^^^^^^^^^^ LOG014
   |
   = help: Remove `exc_info=`

ℹ Unsafe fix
14 14 | 
15 15 | 
16 16 | logging.info("", exc_info=1)
17    |-logger.info("", exc_info=1)
   17 |+logger.info("")
18 18 | 
19 19 | 
20 20 | def _():

LOG014.py:21:22: LOG014 [*] `exc_info=` outside exception handlers
   |
20 | def _():
21 |     logging.info("", exc_info=True)
   |                      ^^^^^^^^^^^^^ LOG014
22 |     logger.info("", exc_info=True)
   |
   = help: Remove `exc_info=`

ℹ Unsafe fix
18 18 | 
19 19 | 
20 20 | def _():
21    |-    logging.info("", exc_info=True)
   21 |+    logging.info("")
22 22 |     logger.info("", exc_info=True)
23 23 | 
24 24 | 

LOG014.py:22:21: LOG014 [*] `exc_info=` outside exception handlers
   |
20 | def _():
21 |     logging.info("", exc_info=True)
22 |     logger.info("", exc_info=True)
   |                     ^^^^^^^^^^^^^ LOG014
   |
   = help: Remove `exc_info=`

ℹ Unsafe fix
19 19 | 
20 20 | def _():
21 21 |     logging.info("", exc_info=True)
22    |-    logger.info("", exc_info=True)
   22 |+    logger.info("")
23 23 | 
24 24 | 
25 25 | try:

LOG014.py:29:26: LOG014 [*] `exc_info=` outside exception handlers
   |
27 | except ...:
28 |     def _():
29 |         logging.info("", exc_info=True)
   |                          ^^^^^^^^^^^^^ LOG014
30 |         logger.info("", exc_info=True)
   |
   = help: Remove `exc_info=`

ℹ Unsafe fix
26 26 |     ...
27 27 | except ...:
28 28 |     def _():
29    |-        logging.info("", exc_info=True)
   29 |+        logging.info("")
30 30 |         logger.info("", exc_info=True)
31 31 | 
32 32 | 

LOG014.py:30:25: LOG014 [*] `exc_info=` outside exception handlers
   |
28 |     def _():
29 |         logging.info("", exc_info=True)
30 |         logger.info("", exc_info=True)
   |                         ^^^^^^^^^^^^^ LOG014
   |
   = help: Remove `exc_info=`

ℹ Unsafe fix
27 27 | except ...:
28 28 |     def _():
29 29 |         logging.info("", exc_info=True)
30    |-        logger.info("", exc_info=True)
   30 |+        logger.info("")
31 31 | 
32 32 | 
33 33 | ### No errors
