crates/ruff_linter/src/rules/flake8_logging/snapshots/ruff_linter__rules__flake8_logging__tests__LOG014_LOG014_0.py.snap
---
source: crates/ruff_linter/src/rules/flake8_logging/mod.rs
---
LOG014 [*] `exc_info=` outside exception handlers
  --> LOG014_0.py:12:18
   |
10 | ### Errors
11 |
12 | logging.info("", exc_info=True)
   |                  ^^^^^^^^^^^^^
13 | logger.info("", exc_info=True)
   |
help: Remove `exc_info=`
   |
12 - logging.info("", exc_info=True)
12 + logging.info("")
   |
note: This is an unsafe fix and may change runtime behavior

LOG014 [*] `exc_info=` outside exception handlers
  --> LOG014_0.py:13:17
   |
12 | logging.info("", exc_info=True)
13 | logger.info("", exc_info=True)
   |                 ^^^^^^^^^^^^^
help: Remove `exc_info=`
   |
13 - logger.info("", exc_info=True)
13 + logger.info("")
   |
note: This is an unsafe fix and may change runtime behavior

LOG014 [*] `exc_info=` outside exception handlers
  --> LOG014_0.py:16:18
   |
16 | logging.info("", exc_info=1)
   |                  ^^^^^^^^^^
17 | logger.info("", exc_info=1)
   |
help: Remove `exc_info=`
   |
16 - logging.info("", exc_info=1)
16 + logging.info("")
   |
note: This is an unsafe fix and may change runtime behavior

LOG014 [*] `exc_info=` outside exception handlers
  --> LOG014_0.py:17:17
   |
16 | logging.info("", exc_info=1)
17 | logger.info("", exc_info=1)
   |                 ^^^^^^^^^^
help: Remove `exc_info=`
   |
17 - logger.info("", exc_info=1)
17 + logger.info("")
   |
note: This is an unsafe fix and may change runtime behavior

LOG014 [*] `exc_info=` outside exception handlers
  --> LOG014_0.py:21:22
   |
20 | def _():
21 |     logging.info("", exc_info=True)
   |                      ^^^^^^^^^^^^^
22 |     logger.info("", exc_info=True)
   |
help: Remove `exc_info=`
   |
21 -     logging.info("", exc_info=True)
21 +     logging.info("")
   |
note: This is an unsafe fix and may change runtime behavior

LOG014 [*] `exc_info=` outside exception handlers
  --> LOG014_0.py:22:21
   |
20 | def _():
21 |     logging.info("", exc_info=True)
22 |     logger.info("", exc_info=True)
   |                     ^^^^^^^^^^^^^
help: Remove `exc_info=`
   |
22 -     logger.info("", exc_info=True)
22 +     logger.info("")
   |
note: This is an unsafe fix and may change runtime behavior
