crates/ruff_linter/src/rules/flake8_logging/snapshots/ruff_linter__rules__flake8_logging__tests__LOG014_LOG014_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_logging/mod.rs
---
LOG014 [*] `exc_info=` outside exception handlers
 --> LOG014_1.py:4:17
  |
4 | logger.info("", exc_info=True)
  |                 ^^^^^^^^^^^^^
help: Remove `exc_info=`
  |
4 - logger.info("", exc_info=True)
4 + logger.info("")
  |
note: This is an unsafe fix and may change runtime behavior
