crates/ruff_linter/src/rules/flake8_logging/snapshots/ruff_linter__rules__flake8_logging__tests__LOG015_LOG015.py.snap
---
source: crates/ruff_linter/src/rules/flake8_logging/mod.rs
---
LOG015 `debug()` call on root logger
 --> LOG015.py:4:1
  |
2 | import logging
3 |
4 | logging.debug("Lorem")
  | ^^^^^^^^^^^^^^^^^^^^^^
5 | logging.info("ipsum")
6 | logging.warn("dolor")
  |
help: Use own logger instead

LOG015 `info()` call on root logger
 --> LOG015.py:5:1
  |
4 | logging.debug("Lorem")
5 | logging.info("ipsum")
  | ^^^^^^^^^^^^^^^^^^^^^
6 | logging.warn("dolor")
7 | logging.warning("sit")
  |
help: Use own logger instead

LOG015 `warn()` call on root logger
 --> LOG015.py:6:1
  |
4 | logging.debug("Lorem")
5 | logging.info("ipsum")
6 | logging.warn("dolor")
  | ^^^^^^^^^^^^^^^^^^^^^
7 | logging.warning("sit")
8 | logging.error("amet")
  |
help: Use own logger instead

LOG015 `warning()` call on root logger
 --> LOG015.py:7:1
  |
5 | logging.info("ipsum")
6 | logging.warn("dolor")
7 | logging.warning("sit")
  | ^^^^^^^^^^^^^^^^^^^^^^
8 | logging.error("amet")
9 | logging.critical("consectetur")
  |
help: Use own logger instead

LOG015 `error()` call on root logger
  --> LOG015.py:8:1
   |
 6 | logging.warn("dolor")
 7 | logging.warning("sit")
 8 | logging.error("amet")
   | ^^^^^^^^^^^^^^^^^^^^^
 9 | logging.critical("consectetur")
10 | logging.log("adipiscing")
   |
help: Use own logger instead

LOG015 `critical()` call on root logger
  --> LOG015.py:9:1
   |
 7 | logging.warning("sit")
 8 | logging.error("amet")
 9 | logging.critical("consectetur")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
10 | logging.log("adipiscing")
11 | logging.exception("elit.")
   |
help: Use own logger instead

LOG015 `log()` call on root logger
  --> LOG015.py:10:1
   |
 8 | logging.error("amet")
 9 | logging.critical("consectetur")
10 | logging.log("adipiscing")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
11 | logging.exception("elit.")
   |
help: Use own logger instead

LOG015 `exception()` call on root logger
  --> LOG015.py:11:1
   |
 9 | logging.critical("consectetur")
10 | logging.log("adipiscing")
11 | logging.exception("elit.")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Use own logger instead

LOG015 `debug()` call on root logger
  --> LOG015.py:26:1
   |
24 | )
25 |
26 | debug("Lorem")
   | ^^^^^^^^^^^^^^
27 | info("ipsum")
28 | warn("dolor")
   |
help: Use own logger instead

LOG015 `info()` call on root logger
  --> LOG015.py:27:1
   |
26 | debug("Lorem")
27 | info("ipsum")
   | ^^^^^^^^^^^^^
28 | warn("dolor")
29 | warning("sit")
   |
help: Use own logger instead

LOG015 `warn()` call on root logger
  --> LOG015.py:28:1
   |
26 | debug("Lorem")
27 | info("ipsum")
28 | warn("dolor")
   | ^^^^^^^^^^^^^
29 | warning("sit")
30 | error("amet")
   |
help: Use own logger instead

LOG015 `warning()` call on root logger
  --> LOG015.py:29:1
   |
27 | info("ipsum")
28 | warn("dolor")
29 | warning("sit")
   | ^^^^^^^^^^^^^^
30 | error("amet")
31 | critical("consectetur")
   |
help: Use own logger instead

LOG015 `error()` call on root logger
  --> LOG015.py:30:1
   |
28 | warn("dolor")
29 | warning("sit")
30 | error("amet")
   | ^^^^^^^^^^^^^
31 | critical("consectetur")
32 | log("adipiscing")
   |
help: Use own logger instead

LOG015 `critical()` call on root logger
  --> LOG015.py:31:1
   |
29 | warning("sit")
30 | error("amet")
31 | critical("consectetur")
   | ^^^^^^^^^^^^^^^^^^^^^^^
32 | log("adipiscing")
33 | exception("elit.")
   |
help: Use own logger instead

LOG015 `log()` call on root logger
  --> LOG015.py:32:1
   |
30 | error("amet")
31 | critical("consectetur")
32 | log("adipiscing")
   | ^^^^^^^^^^^^^^^^^
33 | exception("elit.")
   |
help: Use own logger instead

LOG015 `exception()` call on root logger
  --> LOG015.py:33:1
   |
31 | critical("consectetur")
32 | log("adipiscing")
33 | exception("elit.")
   | ^^^^^^^^^^^^^^^^^^
help: Use own logger instead
